# dxbleuio

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: bleuio.rs  main.rs
